<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<com.google.android.material.appbar.AppBarLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    
    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolBarForgot"
        app:title="@string/forgotTitleEmail"
        app:titleCentered="true"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        style="@style/Theme.LoginAndRegisterAndroidStudio"
        >



    </com.google.android.material.appbar.MaterialToolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">


        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgotLabel"
            android:textSize="18dp"

            android:gravity="center"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailFogot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/logInInputEmail"
            android:layout_marginTop="40dp"
            app:startIconDrawable="@drawable/baseline_mail_outline_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="textWebEmailAddress" />


        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/progressBarForgot"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="invisible" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btnForgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgotbtn"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/textViewMsgSucess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:layout_marginTop="40dp"
            android:visibility="invisible"
            />
    </LinearLayout>

</com.google.android.material.appbar.AppBarLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>